Changed disabled button margin so save button will stop jumping around while editing a question.

--- a/app/styles/treatments.css
+++ b/app/styles/treatments.css
@@ -170,7 +170,6 @@ img {
 .newbutton:disabled {
 	opacity: 0.3;
 	cursor: auto;
-	margin-left: -10px;
 }
 .newbutton:disabled:hover {
 	background-color: #2ecc71;
